# XiaoBleMesh

./: CMakeLists.txt  README.md  prj.conf
boards/CobaltDesign/CustomSeeedNRF52840/: CustomSeeedNRF52840-pinctrl.dtsi  CustomSeeedNRF52840.dts  CustomSeeedNRF52840.yaml  Kconfig.CustomSeeedNRF52840  Kconfig.defconfig  board.cmake  board.yml
src/: lb_service_handler.c  main.c  model_handler.c
